# rolloutscope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-normalized-rollout-schema.md
scripts/: trace_validation.py
src/rolloutscope/: __init__.py  cli.py
src/rolloutscope/adapters/: __init__.py  base.py  prime_rl_train.py  verifiers_eval.py
src/rolloutscope/analysis/: __init__.py  aggregates.py  findings.py
src/rolloutscope/detectors/: __init__.py  _text.py  answer_leakage_echo.py  base.py  degenerate_repetition.py  format_only_wins.py  length_inflation.py  reward_saturation_group_collapse.py  verifier_tamper.py
src/rolloutscope/report/: __init__.py  html.py  json_out.py  model.py  svg.py  terminal.py
src/rolloutscope/report/templates/: report.html.j2
src/rolloutscope/schema/: __init__.py  findings.py  ids.py  io.py  migrate.py  models.py
tests/: conftest.py  test_placeholder.py
tests/artifacts/: detector_fixture_metrics.txt
tests/fixtures/: README.md  multi_turn_rollout.jsonl
tests/fixtures/demo/: README.md  metadata.json  results.jsonl
tests/fixtures/labeled/: README.md  answer_leakage_echo_clean.jsonl  answer_leakage_echo_hacked.jsonl  degenerate_repetition_clean.jsonl  degenerate_repetition_hacked.jsonl  format_only_wins_clean.jsonl  format_only_wins_hacked.jsonl  length_inflation_clean.jsonl  length_inflation_hacked.jsonl  reward_saturation_group_collapse_clean.jsonl  reward_saturation_group_collapse_hacked.jsonl  verifier_tamper_clean.jsonl  verifier_tamper_hacked.jsonl
tests/fixtures/prime_rl_run/: README.md
tests/fixtures/prime_rl_run/step_0/: train_rollouts.jsonl
tests/fixtures/prime_rl_run/step_1/: train_rollouts.jsonl
tests/fixtures/verifiers_eval_run/: metadata.json  results.jsonl
tests/integration/: test_trace_dataset.py
tests/test_adapters/: __init__.py  conftest.py  test_prime_rl_train.py  test_resolve.py  test_verifiers_eval.py
tests/test_cli/: __init__.py  test_e2e.py
tests/test_detectors/: conftest.py  test_answer_leakage_echo.py  test_degenerate_repetition.py  test_fixture_metrics.py  test_format_only_wins.py  test_length_inflation.py  test_registry.py  test_reward_saturation_group_collapse.py  test_verifier_tamper.py
tests/test_report/: conftest.py  test_aggregates.py  test_findings.py  test_html.py  test_json_out.py  test_svg.py  test_terminal.py
tests/test_schema/: test_ids.py  test_io.py  test_json_schema.py  test_migrate.py  test_properties.py  test_roundtrip.py
